<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ScanApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_photo_item">Camera photo</string>
    <string name="action_add_gallery_item">Gallery photo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_checkbox_preference">Checkbox preference</string>
    <string name="summary_checkbox_preference">This is a checkbox</string>
    <string name="title_switch_preference">Switch preference</string>
    <string name="summary_switch_preference">This is a switch</string>
    <string name="summary_switch_preference_yes_no">This is a switch with custom text</string>
    <string name="title_yesno_preference">Yes or no preference</string>
    <string name="summary_yesno_preference">An example that uses a yes/no dialog</string>
    <string name="dialog_title_yesno_preference">Do you like bananas?</string>
    <string name="title_host_preference">Host preference</string>
    <string name="summary_host_preference">Value for default host</string>
    <string name="title_port_preference">Port preference</string>
    <string name="summary_port_preference">Value for default port</string>
    <string name="title_domain_preference">Domain preference</string>
    <string name="summary_domain_preference">Value for default domain</string>
    <string name="title_username_preference">Username preference</string>
    <string name="summary_username_preference">Value for default Username</string>
    <string name="title_password_preference">Password preference</string>
    <string name="summary_password_preference">Value for default Password</string>
    <string name="dialog_title_host_preference">Enter Host name</string>
    <string name="dialog_title_port_preference">Enter Port</string>
    <string name="dialog_title_domain_preference">Enter Domain</string>
    <string name="dialog_title_username_preference">Enter Username</string>
    <string name="dialog_title_password_preference">Enter Password</string>
    <string name="dialog_update_times_preference">Enter Update Times</string>
    <string name="dialog_update_freq_preference">Enter Update Frequency</string>
    <string name="title_list_preference">List preference</string>
    <string name="summary_list_preference">An example that uses a list dialog</string>
    <string name="dialog_title_list_preference">Choose one</string>
    <string name="default_value_list_preference">beta</string>
    <string name="default_value_host_preference">https://test.appbase.com</string>
    <string name="default_value_port_preference">443</string>
    <string name="default_value_domain_preference">UA103_Production.tenant62</string>
    <string name="default_value_username_preference">admin@config.tenant42</string>
    <string name="default_value_password_preference">eccentex1</string>
    <string name="preferences">Preferences</string>
    <string name="action_delete_photo_item">Delete</string>
    <string name="action_send_photo_item">Send</string>
    <string name="action_set_index">Schema</string>
    <string name="album_name">CameraSample</string>
    <string name="thumbs_name">CameraSampleThumb</string>
    <string name="cannot">Cannot</string>
    <string name="comments">Comments</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="btnReIntend">Recapture</string>
    <string name="photo">Take photo</string>
    <string name="title">Title</string>
    <string name="descr_image">image description</string>
    <string name="title_image">Image title</string>
    <string name="file_upload">File uploading…</string>
    <string name="authenticate">Sign In</string>
    <string name="authentication_progress">Signing In…</string>
    <string name="connection_established">Connection established</string>
    <string name="server_connection_problem">Server connection problem</string>
    <string name="login_pass_problem">Incorrect Login or Password</string>
    <string name="auth_problem">Sign In problem</string>
    <string name="close">Close</string>
    <string name="response_token">responseToken</string>
    <string name="save_login">Remember</string>
    <string name="login">username</string>
    <string name="password">password</string>
    <string name="error_field_required">Field required</string>
    <string name="version_unavailable">Version unavailable</string>
    <string name="login_lable">Login</string>
    <string name="login_txt">Username</string>
    <string name="password_txt_hint">Password</string>
    <string name="login_text">Sign In</string>
    <string name="no_connection">No connection to the Internet</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="generic_server_down">Server timeout</string>
    <string name="no_internet">No internet connection</string>
    <string name="generic_error">Generic error</string>
    <string name="image_synced_status">Sync status</string>
    <string name="action_status_item">Status</string>
    <string name="summary_update_times_preference">How many times to perform status update</string>
    <string name="summary_update_freq_preference">How frequently to perform status update</string>
    <string name="default_value_update_times_preference">2</string>
    <string name="update_times_preference">Status check times</string>
    <string name="update_freq_preference">Status check frequency</string>
    <string name="default_value_update_freq_preference">10</string>
    <string name="updateTimes">updateTimes</string>
    <string name="updateFreq">updateFreq</string>
    <string name="account_type">com.galleryapp</string>
    <string name="contentAuthority">com.galleryapp.provider.GalleryDBProvider</string>
    <string name="msg_no_apropr_app">There is no appropriate application to perform this action</string>

</resources>
