<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:lines="2"
        android:layout_margin="5dp"
        android:gravity="start"
        android:hint="@string/title"
        android:padding="10dp" />

    <EditText
        android:id="@+id/comments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        android:layout_margin="5dp"
        android:lines="5"
        android:gravity="start"
        android:hint="@string/comments"
        android:padding="10dp" />

    <ImageView
        android:id="@+id/preview"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="right|center_vertical"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:visibility="visible" />

    <Button
        android:id="@+id/btnReIntend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnReIntend"
        android:visibility="visible" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:visibility="visible" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:visibility="visible" />

</LinearLayout>
