<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/grid_item"
    android:layout_height="@dimen/grid_item">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="false"
        android:contentDescription="@string/descr_image"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/thumb_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/grid_item_text_height"
        android:layout_gravity="bottom"
        android:background="@color/holo_blue_bright"
        android:contentDescription="@string/title_image"
        android:padding="8dp" />

    <TextView
        android:id="@+id/thumb_is_synced"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:background="@color/white"
        android:contentDescription="@string/image_synced_status"
        android:padding="8dp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/thumb_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:background="@color/white"
        android:padding="8dp" />

    <ProgressBar
        android:id="@+id/progress"
        style="?android:progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:indeterminate="false"
        android:max="100"
        android:visibility="gone" />
</FrameLayout>